# class-3_assignments

./: .env  .env.example  README.md  pyproject.toml
assignment-1/: chatbot.py  faq_agent.py
assignment-2/: math_agent.py  math_bot.py
assignment-3/: chainlit.md  weather_agent.py  weather_bot.py  weather_tool.py
assignment-4/: chainlit.md  multi_agent.py  multi_bot.py  multi_tools.py
